CODETOOLS-7903302: cleanup code