@@ -34,7 +34,6 @@ import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.LinkedHashMap;
@@ -428,7 +427,7 @@ public abstract class Action extends ActionHelper {
      * @see com.sun.javatest.lib.ProcessCommand#run
      */
     protected void showCmd(String action, String[] cmdArgs, TestResult.Section section) {
-        showCmd(action, Arrays.asList(cmdArgs), section);
+        showCmd(action, List.of(cmdArgs), section);
     }
 
     protected void showCmd(String action, List<String> cmdArgs, TestResult.Section section) {
